syntax = "proto3";

package cloud.disk_manager;

import "cloud/api/operation/operation.proto";
import "google/protobuf/empty.proto";
import "cloud/disk_manager/api/placement_group.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/api;disk_manager";

service PlacementGroupService {
    // Returns operation with:
    // response: google.protobuf.Empty
    rpc Create(CreatePlacementGroupRequest) returns (cloud.operation.Operation);

    // Returns operation with:
    // metadata: DeletePlacementGroupMetadata
    // response: google.protobuf.Empty
    rpc Delete(DeletePlacementGroupRequest) returns (cloud.operation.Operation);

    // Returns operation with:
    // response: google.protobuf.Empty
    rpc Alter(AlterPlacementGroupMembershipRequest) returns (cloud.operation.Operation);

    rpc List(ListPlacementGroupsRequest) returns (ListPlacementGroupsResponse) {}

    rpc Describe(DescribePlacementGroupRequest) returns (PlacementGroup) {}
}

message CreatePlacementGroupRequest {
    reserved 3;

    GroupId group_id = 1;
    PlacementStrategy placement_strategy = 2;
    uint32 placement_partition_count = 4;
}

message DeletePlacementGroupRequest {
    GroupId group_id = 1;
}

message DeletePlacementGroupMetadata {
    GroupId group_id = 1;
}

message AlterPlacementGroupMembershipRequest {
    reserved 4;

    GroupId group_id = 1;
    repeated string disks_to_add = 2;
    repeated string disks_to_remove = 3;
    uint32 placement_partition_index = 5;
}

message ListPlacementGroupsRequest {
    string zone_id = 1;
}

message ListPlacementGroupsResponse {
    repeated string group_ids = 1;
}

message DescribePlacementGroupRequest {
    GroupId group_id = 1;
}
